[package]
name = "pelite-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.pelite]
path = ".."
version = "0.7.1"
features = ["serde", "data-encoding"]

[dependencies]
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
# wee_alloc = "0.4"
